fix commit: - исправлено регулярное выражения для проверки вводимой суммы перевода (представление 'payment_page.html')

--- a/ParrotPaymentsApp/ng-backbone/views/payment_page.html
+++ b/ParrotPaymentsApp/ng-backbone/views/payment_page.html
@@ -19,7 +19,7 @@
                     <div class="col-md-12">
                         <div class="input-group">
                             <span class="input-group-addon">Сумма перевода</span>
-                            <input type="number" class="form-control input-lg" placeholder="" data-ng-model="paymentAmount" value="{{paymentAmount}}" data-ng-pattern="^([\d]){1,9}$" required>
+                            <input type="number" class="form-control input-lg" placeholder="" data-ng-model="paymentAmount" value="{{paymentAmount}}" data-ng-pattern="/^([\d]){1,9}$/" required>
                         </div>
                     </div>
                 </div>
